--- a/src/App.scss
+++ b/src/App.scss
@@ -7,7 +7,7 @@
   min-height: calc(100vh - 40px); // accommodating the padding
   background: url("../src/assets/background-image.jpeg") no-repeat center fixed;
   background-size: cover;
-  max-width: 1750px;
+  max-width: 100vw;
 }
 
 .game-header {
